#133 refresh README installation and mention optionalAggregate
- Replace external-consumer setup subsections with a link to the new Consuming-LIRP wiki page
  covering Gradle plugin / Gradle manual / Maven / troubleshooting / compatibility matrix.
- Add the optional lirp-sql Gradle plugin to the quickstart plugins block with an inline
  comment clarifying it is optional.
- Mention optionalAggregate in Aggregate References alongside aggregate() so readers discover
  the nullable-FK delegate exists, with a cross-link to DDD-and-Aggregates.
#84 Hydrate cover image for JSON-loaded playlists

FXPlaylist.init registered ListChangeListeners on audioItemsAggregate
and playlistsAggregate but never ran the initial computation. JSON-
hydrated playlists arrive with audioItemsAggregate referencing IDs
only — the aggregate is bound to the audio item registry by lirp's
bindEntityRefs after init returns, so the listener never fires and
_coverImageProperty stayed Optional.empty().

- FXPlaylist.init: best-effort recompute after listener registration
  (covers the synchronously-resolvable construction paths).
- FXPlaylist: new internal triggerCoverHydration() exposing the
  recompute to the hierarchy without leaking _coverImageProperty.
- FXPlaylistHierarchy.init: extend the existing post-load sync loop
  to call audioItemsAggregate.syncLocalCache() (wrapped in runCatching
  to preserve the audio-library-less init path) and
  triggerCoverHydration() on each FXPlaylist after entity binding.

Closes #84
Refs: PL-04 (Musicott)
Split build.gradle into focused gradle/*.gradle files

Extract three cohesive sections from build.gradle to keep the root file
focused on plugins, dependencies, kotlin/jvm config, and the version
catalog:

- gradle/test-suites.gradle: testJvmArgs / configureTestFxSystemProperties
  closure, integrationTest / uiTest / e2eTest source sets, IDEA test-source
  registration, configuration extension chain, test-suite dependencies,
  test / integrationTest / uiTest / e2e